[gd_scene load_steps=2 format=3 uid="uid://gold_display_001"]

[ext_resource type="Script" path="res://scripts/ui/gold_display.gd" id="1_gold_display"]

[node name="GoldDisplay" type="HBoxContainer"]
layout_mode = 0
anchors_preset = 0
offset_left = 52.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 96.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_gold_display")
theme_override_constants/separation = 4

[node name="CoinIcon" type="TextureRect" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
stretch_mode = 4

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 36.0
offset_top = 0.0
offset_right = 98.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
vertical_alignment = 1

